--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -18,14 +22,4 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-.navbar {
-  display: flex;
-  width: 100%;
-  height: 30px;
-  background-color: black;
-  color: white;
-  align-items: center;
-  padding: 0 5%;
 }
