--- a/src/components/layouts/Navbar/Navbar.module.css
+++ b/src/components/layouts/Navbar/Navbar.module.css
@@ -1,9 +1,17 @@
 .navbar {
   display: flex;
   width: 100%;
-  height: 30px;
+  height: 40px;
   background-color: black;
   color: white;
   align-items: center;
   padding: 0 5%;
+  justify-content: space-between;
+}
+
+.button {
+  background-color: white;
+  color: black;
+  font-size: 14px;
+  padding: 4px 10px;
 }
