--- a/src/components/layouts/Navbar/Navbar.module.css
+++ b/src/components/layouts/Navbar/Navbar.module.css
@@ -15,3 +15,13 @@
   font-size: 14px;
   padding: 4px 10px;
 }
+
+.avatar {
+  width: 30%;
+  height: 30%;
+  border-radius: 50%;
+}
+
+.profile {
+  display: flex;
+}
