--- a/src/views/Auth/Login/Login.module.scss
+++ b/src/views/Auth/Login/Login.module.scss
@@ -35,6 +35,11 @@
         width: 100%;
         padding: 10px;
       }
+      &__google {
+        width: 100%;
+        text-align: center;
+        margin-top: 20px;
+      }
     }
   }
   &__link {
